# drachtio-server

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  Dockerfile  LICENSE  Makefile.am  Makefile.in  README  README.md  autogen.sh  bootstrap.sh  build-docker.sh  config.h.in  configure  configure.ac  docker.drachtio.conf.xml  drachtio-init-script  drachtio-server.sublime-project  drachtio-upstart-script  drachtio.conf.json  drachtio.conf.xml  drachtio.service  drachtio.sublime-project  entrypoint.sh  libcurl.m4  missing  pre-commit.sh  sonar-project.properties
.github/: ci.yml
.github/workflows/: ci.yml  clang-analyzer.yml  clang-analyzer.yml.disabled  codeql-analysis.yml  codeql-analysis.yml.disabled  coverity-scan.yml  coverity-scan.yml.disabled  cppcheck.yml  docker-publish.yml  main.yml  sonarcloud.yml
debian/: changelog  control  copyright  drachtio-server.dirs  drachtio-server.drachtio.service  drachtio-server.install  drachtio-server.postinst  orig_source.url  rules
docs/: messages.md  prometheus.md
drachtio.xcodeproj/: project.pbxproj
el/: README.md  drachtio.service  drachtio.spec
m4/: ax_cxx_compile_stdcxx_14.m4  ax_cxx_compile_stdcxx_17.m4
src/: blacklist.cpp  blacklist.hpp  cdr.cpp  cdr.hpp  client-controller.cpp  client-controller.hpp  client.cpp  client.hpp  controller.cpp  controller.hpp  dns-resolver.cpp  dns-resolver.hpp  drachtio-config.cpp  drachtio-config.hpp  drachtio.cpp  drachtio.h  invite-in-progress.cpp  invite-in-progress.hpp  json-msg.hpp  main.cpp  pending-request-controller.cpp  pending-request-controller.hpp  redis-service.cpp  redis-service.hpp  request-handler.cpp  request-handler.hpp  request-router.cpp  request-router.hpp  sip-dialog-controller.cpp  sip-dialog-controller.hpp  sip-dialog-holder.cpp  sip-dialog-maker.cpp  sip-dialog-maker.hpp  sip-dialog.cpp  sip-dialog.hpp  sip-msg-matcher.cpp  sip-msg-matcher.hpp  sip-proxy-controller.cpp  sip-proxy-controller.hpp  sip-transports.cpp  (+22 more)
src/test/: test_header_name.cpp  test_timer_stale_handle.cpp
test/: b2b.js  connection_tests.js  dependencies.js  drachtio.conf.xml  drachtio.conf10.xml  drachtio.conf2.xml  drachtio.conf3.xml  drachtio.conf4.xml  drachtio.conf5.xml  drachtio.conf6.xml  drachtio.conf7.xml  drachtio.conf8.xml  drachtio.conf9.xml  drachtio.session-timer-uac.conf.xml  index.js  package-lock.json  package.json  proxy.js  reinvite-tests.js  run_tests.js  test-fixtures-100-trying-25s-delay.json  test-fixtures-all.json  test-fixtures-multiple-provisionals.json  test-fixtures-register-jp-chars.json  test-fixtures-register-with-star-in-contact.json  test-fixtures-uac-ack.json  test-fixtures-uac-invalid-uri-user.json  test-fixtures-uac-long-uri.json  test-fixtures-uac-prack.json  test-fixtures-uac-reinvite-stale-ack.json  testbed.js  timer-d.js  uac-no-ack.xml  uac.js  uas.js  zombie-client-tests.js
test/leak-repro/: .gitignore  README.md  go.mod  go.sum  main.go
test/scenarios/: register-bad-contact.xml  uac-200-no-ack.xml  uac-cancel-after-no-100.xml  uac-cancel.xml  uac-drop-200-then-cancel.xml  uac-drop-all-200.xml  uac-drop-one-200.xml  uac-drop-one-503.xml  uac-expect-480.xml  uac-expect-486.xml  uac-expect-500.xml  uac-expect-503.xml  uac-forking.xml  uac-invalid-uri-user.xml  uac-long-message.xml  uac-long-sdp.xml  uac-long-uri.xml  uac-no-ack.xml  uac-notify-during-call-setup.xml  uac-options-expect-200.xml  uac-options-routed-expect-200.xml  uac-outbound-3031.xml  uac-outbound-3032.xml  uac-outbound-3033-expect-480.xml  uac-outbound-3034.xml  uac-outbound-3035.xml  uac-outbound-3041.xml  uac-overlapping.xml  uac-pcap.xml  uac-preloaded-route.xml  uac-recv-bye.xml  uac-recv-reinvite.xml  uac-refresh.xml  uac-register-jp-chars.xml  uac-register-recv-invite.xml  uac-register-subscribe-publish.xml  uac-register-with-star-in-contact.xml  uac-reinvite-bye-race.xml  uac-send-reinvite-no-sdp.xml  uac-session-expires-no-refresher-default.xml  (+34 more)
test/scenarios/pcap/: uac-refresh.xml
test/scripts/: call-router.js  config.json  simple-b2b-overlapping.js  simple-b2b.js  simple-uac-register.js  simple-uac.js  simple-uas.js  uac.js  uas.js  wedge-client.js
test/scripts/test-app-refcounts/: app.js  package-lock.json  package.json
test/sipp/: auth.csv  callid.csv  uac-fork-200.xml  uac-fork-auth.xml
test/tls/: dh1024.pem  dh4096.pem  server.crt  server.key
test/utils/: delay.js  exec.js
